[gd_scene load_steps=29 format=2]

[ext_resource path="res://scenes/login/login.gd" type="Script" id=1]
[ext_resource path="res://nexa/Nexa-Heavy.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://altone/Altone Trial-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://images/circulo.png" type="Texture" id=4]
[ext_resource path="res://altone/Altone Trial-BoldOblique.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://gontserrat/Gontserrat-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=14]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.0941176, 0.0941176, 0.0941176, 0.478431 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="Theme" id=12]
Panel/styles/panel = SubResource( 11 )

[sub_resource type="DynamicFont" id=7]
size = 35
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 20

[sub_resource type="Theme" id=2]
Panel/styles/panel = SubResource( 1 )

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="Theme" id=17]
LineEdit/styles/focus = SubResource( 15 )
LineEdit/styles/normal = SubResource( 16 )

[sub_resource type="DynamicFont" id=21]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=19]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.411765, 0.101961, 0.101961, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.470588, 0.14902, 0.14902, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 20
shadow_size = 2

[sub_resource type="Theme" id=6]
Button/styles/focus = SubResource( 5 )
Button/styles/hover = SubResource( 13 )
Button/styles/normal = SubResource( 5 )
Button/styles/pressed = SubResource( 5 )

[sub_resource type="DynamicFont" id=20]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=18]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=4]
LineEdit/styles/focus = SubResource( 3 )
LineEdit/styles/normal = SubResource( 3 )

[sub_resource type="DynamicFont" id=22]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=8]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0823529, 0.0823529, 0.0941176, 1 )

[node name="circulo" type="TextureRect" parent="."]
modulate = Color( 0.219608, 0.223529, 0.235294, 1 )
margin_left = 173.0
margin_top = 73.0
margin_right = 973.0
margin_bottom = 873.0
texture = ExtResource( 4 )

[node name="llm" type="Label" parent="."]
margin_left = 188.0
margin_top = 47.0
margin_right = 559.0
margin_bottom = 141.0
custom_fonts/font = SubResource( 14 )
text = "Linux Live Messenger"

[node name="Panel" type="Panel" parent="."]
margin_left = 49.0
margin_top = 73.0
margin_right = 397.0
margin_bottom = 415.0
theme = SubResource( 12 )

[node name="registro" type="Control" parent="."]
visible = false

[node name="label_registrarse" type="Label" parent="registro"]
margin_left = 74.0
margin_top = 88.0
margin_right = 308.0
margin_bottom = 139.0
custom_fonts/font = SubResource( 7 )
text = "Registrarse"

[node name="panel" type="Panel" parent="registro"]
margin_left = 76.0
margin_top = 166.0
margin_right = 374.0
margin_bottom = 206.0
theme = SubResource( 2 )

[node name="panel2" type="Panel" parent="registro"]
margin_left = 76.0
margin_top = 223.0
margin_right = 374.0
margin_bottom = 263.0
theme = SubResource( 2 )

[node name="panel3" type="Panel" parent="registro"]
margin_left = 76.0
margin_top = 282.0
margin_right = 374.0
margin_bottom = 322.0
theme = SubResource( 2 )

[node name="email" type="LineEdit" parent="registro"]
margin_left = 83.0
margin_top = 170.0
margin_right = 365.0
margin_bottom = 202.0
theme = SubResource( 17 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 21 )
placeholder_text = "Email "
caret_blink = true

[node name="password" type="LineEdit" parent="registro"]
margin_left = 82.0
margin_top = 228.0
margin_right = 367.0
margin_bottom = 260.0
theme = SubResource( 17 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 19 )
secret = true
placeholder_text = "Contraseña "
caret_blink = true

[node name="conf_password" type="LineEdit" parent="registro"]
margin_left = 83.0
margin_top = 287.0
margin_right = 365.0
margin_bottom = 319.0
theme = SubResource( 17 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 19 )
secret = true
placeholder_text = "Confirmar contraseña"
caret_blink = true

[node name="registrar" type="Button" parent="registro"]
margin_left = 101.0
margin_top = 348.0
margin_right = 348.0
margin_bottom = 387.0
theme = SubResource( 6 )
custom_fonts/font = SubResource( 20 )
text = "Completar registro"

[node name="Label2" type="Label" parent="registro"]
margin_left = 16.0
margin_top = 473.0
margin_right = 190.0
margin_bottom = 494.0
custom_fonts/font = SubResource( 18 )
text = "¿Ya tiene una cuenta?"

[node name="in_sesion" type="Button" parent="registro"]
modulate = Color( 0.917647, 0.988235, 0.168627, 1 )
margin_left = 186.0
margin_top = 470.0
margin_right = 317.0
margin_bottom = 497.0
custom_fonts/font = SubResource( 18 )
text = "Iniciar sesión"
flat = true

[node name="login" type="Control" parent="."]

[node name="Label" type="Label" parent="login"]
margin_left = 74.0
margin_top = 88.0
margin_right = 308.0
margin_bottom = 182.0
custom_fonts/font = SubResource( 7 )
text = "Iniciar Sesión"

[node name="panel_email" type="Panel" parent="login"]
margin_left = 73.0
margin_top = 183.0
margin_right = 371.0
margin_bottom = 223.0
theme = SubResource( 2 )

[node name="panel_password" type="Panel" parent="login"]
margin_left = 74.0
margin_top = 237.0
margin_right = 372.0
margin_bottom = 277.0
theme = SubResource( 2 )

[node name="email" type="LineEdit" parent="login"]
margin_left = 80.0
margin_top = 184.0
margin_right = 364.0
margin_bottom = 224.0
theme = SubResource( 4 )
custom_colors/selection_color = Color( 0.666667, 0.0941176, 0.0941176, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0.792157, 0.792157, 0.792157, 1 )
custom_colors/font_color = Color( 0.113725, 0.113725, 0.113725, 1 )
custom_fonts/font = SubResource( 22 )
text = "asd"
placeholder_text = "Email"
caret_blink = true

[node name="password" type="LineEdit" parent="login"]
margin_left = 80.0
margin_top = 239.0
margin_right = 365.0
margin_bottom = 279.0
theme = SubResource( 4 )
custom_colors/selection_color = Color( 0.666667, 0.0941176, 0.0941176, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0.792157, 0.792157, 0.792157, 1 )
custom_colors/font_color = Color( 0.113725, 0.113725, 0.113725, 1 )
custom_fonts/font = SubResource( 8 )
text = "123"
secret = true
placeholder_text = "Password"
caret_blink = true

[node name="registrarse" type="Button" parent="login"]
modulate = Color( 0.917647, 0.988235, 0.168627, 1 )
margin_left = 225.0
margin_top = 468.0
margin_right = 349.0
margin_bottom = 499.0
custom_fonts/font = SubResource( 9 )
text = "Registrarse"
flat = true

[node name="Label2" type="Label" parent="login"]
margin_left = 10.0
margin_top = 473.0
margin_right = 224.0
margin_bottom = 495.0
custom_fonts/font = SubResource( 9 )
text = "¿No tienes cuenta todavía?"

[node name="ingresar_button" type="Button" parent="login"]
margin_left = 101.0
margin_top = 348.0
margin_right = 348.0
margin_bottom = 387.0
mouse_default_cursor_shape = 2
theme = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 10 )
text = "Ingresar"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="registro/registrar" to="." method="_on_registrar_pressed"]
[connection signal="pressed" from="registro/in_sesion" to="." method="_on_in_sesion_pressed"]
[connection signal="pressed" from="login/registrarse" to="." method="_on_registrarse_pressed"]
[connection signal="pressed" from="login/ingresar_button" to="." method="_on_ingresar_button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
